fixed links on smallest size

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,14 +8,21 @@ $dark-blue: #001F48;
 }
 
 .footer {
-  border-top:2px solid #111;
-  border-bottom:2px solid #111;
-  margin: 20px 0px;
+  border-top:2px solid #222;
+  border-bottom:2px solid #222;
+  margin: 25px 0px;
   padding: 15px 0px;
 }
 
 .footer-medium {
   display:none;
+}
+
+@media (min-width: 576px) {
+  .footer {
+    border-top:1px solid #222;
+    border-bottom:1px solid #222;
+  }
 }
 
 @media (min-width: 768px) {
