--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,7 +12,7 @@ $navigation-color:#666;
 
 .intro-container {
   margin:0px 0px 0px 0px;
-  padding:20px 15px 0px 15px;
+  padding:25px 20px 0px 20px;
   max-width:976px;
   clear:both;
 }
@@ -75,7 +75,7 @@ $navigation-color:#666;
 
   .intro-container {
     margin:0px 0px 0px 0px;
-    padding:20px 5px 0px 5px;
+    padding:25px 5px 0px 5px;
     max-width:976px;
     clear:both;
   }
